hphp/test/quick/dv_ab.php.expectf

Fatal error: Default value for parameter a1 with type Boolean needs to have the same type as the type hint HH\arraylike in %s on line 3
